[package]
authors = ["Cameron Davison <cameron.davison@gmail.com>"]
description = "A library to read template strings for local network interfaces"
edition = "2018"
license = "MIT"
name = "ift"
readme = "README.md"
repository = "https://github.com/camerondavison/ift"
version = "0.3.3-alpha.0"

[workspace]
members = ["ift-gen"]

[badges]
travis-ci = { repository = "camerondavison/ift" }

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
ipnet = "2.0.0"
pest = "2.1.0"
pest_derive = "2.1.0"
pnet = "0.22.0"
regex = "1.1.0"

[dev-dependencies]
assert_cmd = "0.10.2"
predicates = "1.0.0"
actix = "0.7.9"
actix-web = "0.7.17"
env_logger = "0.6.0"
