[package]
authors = ["Cameron Davison <cameron.davison@gmail.com>"]
description = "A library to read template strings for local network interfaces"
edition = "2018"
license = "MIT"
name = "ift"
readme = "README.md"
repository = "https://github.com/camerondavison/ift"
version = "0.3.3-alpha.0"

[workspace]
members = ["ift-gen"]

[badges]
travis-ci = {repository = "camerondavison/ift"}

[dependencies]
clap = "2.32.0"
failure = "0.1.8"
ipnet = "2.3.0"
pest = "2.1.3"
pest_derive = "2.1.0"
pnet = "0.27"
regex = "1.4.3"

[dev-dependencies]
actix = "0.7.9"
actix-web = "0.7.17"
assert_cmd = "0.10.2"
env_logger = "0.6.0"
predicates = "1.0.0"
