[package]
name = "ift"
version = "0.0.1"
authors = ["Cameron Davison <cameron@novilabs.com>"]
edition = "2018"
description = "A library to read template strings for local network interfaces"
repository = "https://github.com/camerondavison/ift"
readme = "README.md"
license = "MIT/Apache-2.0"

[package.metadata.release]
sign-commit = true
upload-doc = true
pre-release-replacements = [ 
  {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}"}, 
  {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="../README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"},
]

[badges]
travis-ci = { repository = "camerondavison/ift" }

[dependencies]
pnet = "0.21.0"
pest = "2.1.0"
pest_derive = "2.1.0"
ipnet = "2.0.0"
regex = "1.1.0"
failure = "0.1.5"
